# phys-engine

./: CMakeLists.txt  README.md  main.cpp
include/: Body.h  CharacterBody.h  Engine.h  Input.h  Mesh.h  MeshRenderData.h  MeshRenderer.h  Physics.h  Renderer.h  RigidBody.h  Shader.h  Transform.h  Triangle.h  World.h
shaders/: basic.frag  basic.vert
src/: Body.cpp  CharacterBody.cpp  Engine.cpp  Input.cpp  Mesh.cpp  MeshRenderData.cpp  MeshRenderer.cpp  Physics.cpp  Renderer.cpp  RigidBody.cpp  Shader.cpp  Transform.cpp  Triangle.cpp  World.cpp  main.cpp
test/: main.cpp
test/include/: Player.h
test/src/: Player.cpp
